<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">匿名聊天</string>
    <string name="user_info">用戶：%1$s (%2$s)</string>
    <string name="edit_nickname">編輯暱稱</string>
    <string name="show_qr_code">顯示二維碼</string>
    <string name="add_friend">添加好友</string>
    <string name="join_group">加入群組</string>
    <string name="group_name_hint">輸入群組名稱</string>
    <string name="create_group_chat">創建群組聊天</string>
    <string name="friends_title">好友</string>
    <string name="chats_title">聊天</string>
    <string name="pending_friends_title">待處理好友</string>
    <string name="add_friend_title">添加好友</string>
    <string name="uid_input_hint">輸入 UID</string>
    <string name="nickname_input_hint">輸入暱稱</string>
    <string name="scan_qr_code">掃描二維碼</string>
    <string name="search_button">搜尋</string>
    <string name="send_request">發送請求</string>
    <string name="cancel">取消</string>
    <string name="join_group_title">加入群組</string>
    <string name="group_id_input_hint">輸入群組 ID 或名稱</string>
    <string name="password_input_hint">輸入密碼</string>
    <string name="search_groups">搜尋群組</string>
    <string name="create_group_title">創建群組</string>
    <string name="invite_friends">邀請好友</string>
    <string name="create">創建</string>
    <string name="invite_friends_title">邀請好友</string>
    <string name="invite">邀請</string>
    <string name="edit_nickname_title">編輯暱稱</string>
    <string name="save">儲存</string>
    <string name="qr_code_title">你的二維碼</string>
    <string name="ok">確定</string>
    <string name="search_results">搜尋結果</string>
    <string name="no_users_found">未找到用戶</string>
    <string name="search_groups_results">群組搜尋結果</string>
    <string name="no_groups_found">未找到群組</string>
    <string name="connection_lost">連線中斷，請稍後再試</string>
    <string name="search_failed">搜尋失敗：%1$s</string>
    <string name="search_groups_failed">群組搜尋失敗：%1$s</string>
    <string name="friend_request_sent">好友請求已發送</string>
    <string name="friend_request_failed">發送好友請求失敗：%1$s</string>
    <string name="join_group_request_sent">加入群組請求已發送</string>
    <string name="join_group_request_failed">發送加入群組請求失敗：%1$s</string>
    <string name="group_created">群組已創建</string>
    <string name="group_create_failed">創建群組失敗：%1$s</string>
    <string name="nickname_updated">暱稱已更新</string>
    <string name="nickname_update_failed">暱稱更新失敗：%1$s</string>
    <string name="friend_request_accepted">%1$s 已接受你的好友請求</string>
    <string name="friend_request_rejected">好友請求被拒絕</string>
    <string name="join_group_approved">你已加入群組：%1$s</string>
    <string name="join_group_rejected">加入群組請求被拒絕</string>
    <string name="type_message">輸入訊息</string>
    <string name="send">發送</string>
    <string name="language_switch">切換語言</string>
    <string name="language_zh">繁體中文</string>
    <string name="language_en">英文</string>
    <string name="invalid_user_info">無法獲取用戶資訊</string>
    <string name="init_failed">初始化失敗，請重試</string>
    <string name="friend_request_failed_generic">處理好友請求失敗</string>
    <string name="search_failed_generic">搜尋用戶失敗</string>
    <string name="search_groups_failed_generic">搜尋群組失敗</string>
    <string name="join_group_request">加入群組請求</string>
    <string name="join_group_request_message">%1$s (UID: %2$s) 請求加入群組，是否同意？</string>
    <string name="approve">同意</string>
    <string name="reject">拒絕</string>
    <string name="join_group_failed">加入群組失敗：%1$s</string>
    <string name="join_group_failed_generic">加入群組失敗</string>
    <string name="group_invite">群組邀請</string>
    <string name="group_invite_message">%1$s 邀請你加入群組：%2$s，是否接受？</string>
    <string name="accept">接受</string>
    <string name="invite_failed">邀請好友失敗</string>
    <string name="nickname_update_failed_generic">更新暱稱失敗</string>
    <string name="enter_uid_or_nickname">請輸入 UID 或暱稱</string>
    <string name="enter_nickname_to_search">請輸入要搜尋的暱稱</string>
    <string name="enter_group_id_password">請輸入群組 ID 和密碼</string>
    <string name="enter_group_query">請輸入群組名稱或 ID 進行搜尋</string>
    <string name="enter_password">請輸入密碼</string>
    <string name="select_friend">請至少選擇一名好友</string>
    <string name="nickname_empty">暱稱不能為空</string>
    <string name="qr_code_failed">生成二維碼失敗</string>
    <string name="scan_prompt">掃描其他用戶的 UID 二維碼</string>
    <string name="start_chat_failed">開始聊天失敗</string>
    <string name="invalid_chat">無效的聊天</string>
    <string name="leave_group">離開群組</string>
    <string name="group_left">已離開群組</string>
    <string name="leave_group_failed">離開群組失敗</string>
    <string name="scan_failed">掃描二維碼失敗</string>
    <string name="enter_group_name">請輸入群組名稱</string>
    <string name="load_friend_list_failed">載入好友列表失敗</string>
    <string name="load_chat_list_failed">載入聊天列表失敗</string>
    <string name="group_chat_created">群組聊天已創建</string>
    <string name="create_group_failed">創建群組失敗：%1$s</string>
    <string name="joined_group">你已加入群組：%1$s</string>
    <string name="create_group">創建群組</string>
    <string name="your_qr_code">你的二維碼</string>
    <string name="group_search_results">群組搜尋結果</string>
    <string name="create_group_failed_generic">創建群組失敗</string>
    <string name="register_success">註冊成功，請登錄</string>
    <string name="register_failed">註冊失敗：%1$s</string>
    <string name="register_failed_generic">註冊失敗</string>
    <string name="login_failed">登錄失敗：%1$s</string>
    <string name="login_failed_generic">登錄失敗</string>
    <string name="input_username_password">請輸入用戶名和密碼</string>
    <string name="invalid_uid_format">無效的 UID 格式</string>
    <string name="language_selection_failed">無法顯示語言選擇對話框</string>
    <string name="received_friend_request">收到來自 %s 的好友請求</string>
    <string name="send_friend_request_failed_title">發送好友請求失敗</string>
    <string name="send_friend_request_failed_message">無法發送好友請求，是否重試？</string>
    <string name="search_users_failed_title">搜尋用戶失敗</string>
    <string name="search_users_failed_message">無法搜尋用戶，是否重試？</string>
    <string name="retry">重試</string>
    <string name="group_message_failed">無法接收群組訊息，請重試</string>
    <string name="send_message_failed_title">發送訊息失敗</string>
    <string name="send_message_failed_message">無法發送訊息，是否重試？</string>
    <string name="receive_message_failed">無法接收訊息，請重試</string>
</resources>