<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/uid_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/uid_input_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/nickname_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname_input_hint"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scan_qr_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scan_qr_code" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_button" />

    </LinearLayout>

</LinearLayout>