<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/group_id_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/group_id_input_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/search_groups_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_groups" />

</LinearLayout>